[package]
name = "SolanaDiscordWalletTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
tokio = { version = "1", features = ["full"] }
solana-sdk = "1.14.13"
solana-client = "1.14.12"
solana-transaction-status = "1.14.13"
prettytable-rs = "0.10.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
json = "0.12.4"
reqwest = "0.11.14"
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "framework", "standard_framework", "model", "cache"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
